minor spacing fix

--- a/dev/sass/globals/document.scss
+++ b/dev/sass/globals/document.scss
@@ -41,7 +41,7 @@ body {
 
     &.section--reversed {
         .section__content-wrapper {
-            padding-left: 3em;
+            padding-left: 4em;
             padding-right: 5em;
             float: right;
         }
